<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fiu.ssobec.Activity.ACConsumptionPrediction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecast_temperature_outside"
            android:id="@+id/forecast_temperature"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/forecast_temperature_val"
            android:layout_marginLeft="60dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Write today\'s Air Conditioning Temperature Set Point:"
            android:id="@+id/ac_setpoint_textview"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:weightSum="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/today_temperature_textfield"
            android:textAlignment="center"
            android:layout_weight="0.78" />
    </LinearLayout>

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="predict"
        android:id="@+id/predict_button"
        android:layout_margin="20dp"
        android:onClick="predictTemperatureEnergy" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prediction of Today&apos;s AC Consumption:"
                android:id="@+id/textView5" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="result"
            android:id="@+id/prediction_result"
            android:layout_margin="20dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="fill_parent"
            android:id="@+id/animated_edu"
            android:layout_height="120dp"
            android:src="@drawable/coolingeducation"
            android:layout_marginTop="50dp" />

    </LinearLayout>


</LinearLayout>
