...
    tools:context="fiu.ssobec.Activity.ZonesDescriptionActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:id="@+id/TemperatureButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="getTemperature"
        android:background="#ff6bb3ff"
        android:layout_gravity="center_vertical" />
...
        android:layout_gravity="bottom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:id="@+id/PludLoadButton"
        android:layout_below="@+id/OccupancyButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp"
        android:layout_alignEnd="@+id/OccupancyButton"
        android:background="#ff6bb3ff"
        android:onClick="getPlugLoad" />
...
