<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fiu.ssobec.Activity.LoginActivity"
    android:background="@color/login_background">


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_Login"
        android:id="@+id/login_button"
        android:onClick="LoginPost"
        android:padding="15dp"
        android:textSize="15dp"
        android:layout_below="@+id/password_text_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@color/login_button_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/email"
        android:textColor="#fffffdfd"
        android:id="@+id/email_text_view"
        android:textSize="@dimen/login_textfield_size"
        android:singleLine="false"
        android:layout_marginTop="128dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_text_field"
        android:layout_below="@+id/email_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/background_material_light"
        android:padding="10dp"
        android:textColor="@color/default_font_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/password_test_view"
        android:text="@string/password"
        android:textSize="@dimen/login_textfield_size"
        android:layout_below="@+id/email_text_field"
        android:layout_marginTop="55dp"
        android:textColor="#fffffdfd" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_text_field"
        android:layout_below="@+id/password_test_view"
        android:padding="10dp"
        android:background="@color/background_material_light"
        android:layout_marginBottom="10dp"
        android:textColor="@color/default_font_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/warning_text_view"
        android:layout_above="@+id/login_button"
        android:layout_marginBottom="71dp"
        android:textColor="#ffff130e" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_account"
        android:id="@+id/create_login_button"
        android:onClick="getCreateAccount"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/login_button_background"
        android:padding="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/smartbuildinglogo"/>


</RelativeLayout>
