<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fiu.ssobec.Activity.AddZoneActivity">

    <!-- Editext for Search -->

    <!-- List View -->
    <ListView
        android:id="@+id/zonelist_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
