<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fiu.ssobec.Activity.MyZonesActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="50"
        app:showAsAction="never" />


    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_addzone"
        android:icon="@drawable/home_edit_256x"
        android:title="@string/action_addzone"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_editusers"
        android:icon="@drawable/white_group_of_people_128"
        android:title="@string/action_editusers"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_location"
        android:title="@string/action_locate_user"
        android:checkable="true"
        android:orderInCategory="1"
        app:showAsAction="never" />
</menu>
