...
        android:layout_weight="1"
        android:background="@color/login_button_background">

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_view_userrewards" />

    </LinearLayout>


</LinearLayout>

