...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1" android:paddingTop="0dip" android:layout_gravity="top"
            >
            <TableRow>
                <TextView
                    android:id="@+id/text1"
                    style="@style/SettingCodeFontBold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1" android:layout_gravity="left|center_vertical"
                    android:textSize="12sp" android:layout_marginLeft="30dip"

...
                    android:layout_weight="1" android:layout_gravity="left|center_vertical"
                    android:textSize="12sp" android:layout_marginLeft="30dip"
                    android:textColor="@color/default_font_color" />
            </TableRow>
        </TableLayout>

        <CheckBox android:id="@+id/checkbox_child_row" android:focusable="false"
            android:freezesText="false"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="3dp" />

    </TableRow>
</TableLayout>
...
