...
                fbutton:shadowColor="@color/fbutton_color_midnight_blue"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                android:padding="90dip"
                android:onClick="predictConsumption"
                android:id="@+id/predict_consumption"
                android:text="@string/predict_appl_consumption"
                android:textColor="@color/default_background"
                android:layout_margin="5dip"
                android:textSize="20sp"
                android:layout_weight="1" />

...
